--- a/src/scss/base/_core.scss
+++ b/src/scss/base/_core.scss
@@ -13,3 +13,13 @@
 a {
   text-decoration: none;
 }
+
+/// Code taken from Joakim L from EC-Education Sweden
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-wrap: balance;
+}
