--- a/src/scss/components/_icons.scss
+++ b/src/scss/components/_icons.scss
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 @use "@scss/vendors" as v;
 @use "@scss/abstracts/_variables" as a;
+@use "@scss/abstracts/_mixins" as a-m;
 
 ///
 /// Creates a customizable icon with support for Font Awesome integration, dynamic padding calculation using calc(),
@@ -60,8 +61,7 @@
 ///       Custom padding can be provided to override the dynamic calculation if needed.
 ///       The use of calc() allows for more flexible and dynamic sizing, especially when using different units.
 /// Used AI Phind to Generate Documentation
-@mixin icon(
-  $icon-width,
+@mixin icon($icon-width,
   $icon-height,
   $fa-icon-width,
   $fa-icon-height,
@@ -71,8 +71,7 @@
   $font-awesome-style,
   $icon-border-radius: null,
   $icon-color: null,
-  $icon-padding: null
-) {
+  $icon-padding: null) {
   /// Making the calculation
   $padding-horizontal: calc((#{$icon-width} - #{$fa-icon-width}) / 2);
   $padding-vertical: calc((#{$icon-height} - #{$fa-icon-height}) / 2);
@@ -81,24 +80,25 @@
   justify-content: center;
   align-items: center;
 
-  @if $icon-padding != null {
+  @if $icon-padding !=null {
     padding: #{$icon-padding};
-  } @else {
+  }
+
+  @else {
     padding: #{$padding-vertical} #{$padding-horizontal};
   }
 
-  @if $icon-bg-color != null {
+  @if $icon-bg-color !=null {
     background-color: #{$icon-bg-color};
   }
 
-  @if $icon-color != null {
+  @if $icon-color !=null {
     color: #{$icon-color};
   }
 
-  @if $icon-border-radius != null {
+  @if $icon-border-radius !=null {
     border-radius: #{$icon-border-radius};
   }
-  @debug $fa-icon;
 
   &::before {
     display: flex;
@@ -109,23 +109,19 @@
     font-size: min(#{$fa-icon-width}, #{$fa-icon-height});
   }
 
-  @debug $font-awesome;
+  @if $font-awesome ==true {
+    $fa-icon-value: if(type-of($fa-icon)==string and str-index($fa-icon, "var(") !=null,
+        unquote(#{$fa-icon}),
+        $fa-icon );
 
-  @if $font-awesome == true {
-    $fa-icon-value: if(
-      type-of($fa-icon) == string and str-index($fa-icon, "var(") != null,
-      unquote(#{$fa-icon}),
-      $fa-icon
-    );
-
-    @if $icon-width != null and $icon-height != null {
-      @include v.vendor-fa-icon(
-        $font-var: $fa-icon-value,
+    @if $icon-width !=null and $icon-height !=null {
+      @include v.vendor-fa-icon($font-var: $fa-icon-value,
         $font-awesome-style: #{$font-awesome-style},
         $fa-icon-width: #{$fa-icon-width},
-        $fa-icon-height: #{$fa-icon-height}
-      );
-    } @else {
+        $fa-icon-height: #{$fa-icon-height});
+    }
+
+    @else {
       @include v.vendor-fa-icon($fa-icon-value, #{$font-awesome-style});
     }
   }
@@ -162,9 +158,8 @@
 ///       To use a variable for `$font-awesome`, you would need to use JavaScript to
 ///       set a CSS custom property.
 /// Used AI Phind to Generate Documentation
-@mixin icon-base($font-icon-var, $fa-icon-style, $font-awesome-flag) {
-  @include icon(
-    $icon-width: #{var(--icon-width)},
+@mixin icon-base($font-icon-var, $fa-icon-style, $font-awesome-flag, $animation: null) {
+  @include icon($icon-width: #{var(--icon-width)},
     $icon-height: #{var(--icon-height)},
     $fa-icon-width: var(--fa-icon-width),
     $fa-icon-height: var(--fa-icon-height),
@@ -175,6 +170,14 @@
     $fa-icon: $font-icon-var,
     $font-awesome-style: $fa-icon-style,
     $icon-border-radius: #{var(--icon-border-radius)},
-    $icon-color: #{var(--fa-icon-color)}
-  );
+    $icon-color: #{var(--fa-icon-color)});
+
+  @if $animation !=null {
+    /// Adding Hover States
+    @include a-m.interactive-states("&");
+  }
+
+
+
+
 }
