--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -16,6 +16,7 @@ $color-button-black: #0b0f19;
 $color-grey: #f3f6ff;
 $system-warning: #ffba08;
 $system-grey: #b4b7c9;
+$color-system-success: #22C55E;
 
 /// Grayscale
 $color-gray-scale: #e2e5f1;
