--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -16,7 +16,7 @@ $color-button-black: #0b0f19;
 $color-grey: #f3f6ff;
 $system-warning: #ffba08;
 $system-grey: #b4b7c9;
-$color-system-success: #22C55E;
+$color-system-success: #22c55e;
 
 /// Grayscale
 $color-gray-scale: #e2e5f1;
@@ -88,7 +88,8 @@ $display-heading: (
   "d-6": 2.625em,
   "d-7": 2.76875em,
   /// 44.3ox
-  "d-8": 2.13125em /// 34.1px,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+  "d-8": 2.13125em
+    /// 34.1px,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 );
 $headings: (
   "h-1": 2.5rem,
@@ -169,7 +170,7 @@ $breakpoints: (
   "small": 500px,
   "medium": 768px,
   "xlarge": 1200px,
-  "xlarge-1": 1299px,
+  "xlarge-1": 1305px,
   "xlarge-2": 1340px,
   "xlarge-3": 1420px,
 );
@@ -325,7 +326,6 @@ $test: true;
   --fa-icon-style-default: #{solid};
   --icon-border-radius: #{50%};
 
-
   /// Basvariabel för transition
   --interactive-transition-base: 300ms;
 
@@ -349,5 +349,4 @@ $test: true;
   --interactive-transition-focus-visible: 200ms;
   --interactive-bg-focus-visible: #{$color-form};
   --interactive-use-hsl-focus-visible: true;
-
 }
